--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -49,7 +49,7 @@ RUN \
  curl -s \
         https://download.docker.com/linux/debian/gpg | \
         apt-key add - && \
- echo 'deb [arch=arm64] https://download.docker.com/linux/ubuntu bionic stable' > \
+ echo 'deb [arch=armhf] https://download.docker.com/linux/ubuntu bionic stable' > \
         /etc/apt/sources.list.d/docker-ce.list && \
  apt-get update && \
  apt-get install -y --no-install-recommends \
