--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -8,7 +8,7 @@ RUN \
  apt-get install -y \
 	git \
 	libffi-dev \
-	openssl-dev \
+	libssl-dev \
 	python3 \
         python3-dev \
 	python3-pip \
