--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,7 +3,8 @@
 # jenkins variables
 project_name: docker-cloud9
 external_type: na
-custom_version_command: "curl -s https://golang.org/dl/ | awk -F '(go|.linux-amd64.tar.gz)' '/linux-amd64.tar.gz/ {print $2;exit}'"
+custom_version_command: |
+  curl -s https://golang.org/dl/ | awk -F '(go|.linux-amd64.tar.gz)' '/linux-amd64.tar.gz/ {print $2;exit}'
 release_type: prerelease
 release_tag: go
 ls_branch: go
