--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,4 +1,4 @@
-FROM lsiobase/ubuntu:arm32v7-bionic as buildstage
+FROM ghcr.io/linuxserver/baseimage-ubuntu:arm32v7-bionic as buildstage
 
 ARG COMPOSE_VERSION
 
@@ -34,7 +34,7 @@ RUN \
  mv dist/docker-compose /
 
 # runtime stage
-FROM lsiobase/cloud9:arm32v7-latest
+FROM ghcr.io/linuxserver/baseimage-cloud9:arm32v7-latest
 
 # set version label
 ARG BUILD_DATE
