--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -24,9 +24,10 @@ RUN \
  git clone https://github.com/docker/compose.git && \
  cd compose && \
  git checkout ${COMPOSE_VERSION} && \
- pip3 install \
+ pip3 install -U pip && \
+ pip install \
 	pyinstaller && \
- pip3 install \
+ pip install \
 	-r requirements.txt \
 	-r requirements-build.txt && \
  ./script/build/write-git-sha > compose/GITSHA && \
