--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -12,6 +12,7 @@ RUN \
 	python3 \
 	python3-dev \
 	python3-pip \
+	rustc \
 	zlib1g-dev
 
 RUN \
@@ -24,9 +25,10 @@ RUN \
  git clone https://github.com/docker/compose.git && \
  cd compose && \
  git checkout ${COMPOSE_VERSION} && \
- pip3 install \
+ pip3 install -U pip && \
+ pip install \
 	pyinstaller && \
- pip3 install \
+ pip install \
 	-r requirements.txt \
 	-r requirements-build.txt && \
  ./script/build/write-git-sha > compose/GITSHA && \
