--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,7 +1,7 @@
-ARG COMPOSE_VERSION="latest"
+ARG COMPOSE_VERSION="1.29.2"
 
 # docker compose
-FROM ghcr.io/linuxserver/docker-compose:arm64v8-${COMPOSE_VERSION} as compose
+FROM ghcr.io/linuxserver/docker-compose:arm64v8-version-${COMPOSE_VERSION} as compose
 
 # runtime stage
 FROM ghcr.io/linuxserver/baseimage-cloud9:arm64v8-latest
