--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -8,6 +8,12 @@ project_blurb: |
   [{{ project_name|capitalize }}]({{ project_url }}) Cloud9 is a complete web based IDE with terminal access. This container is for running their core SDK locally and developing plugins.
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
 
+project_deprecation_status: true
+project_deprecation_message: |
+  We recommend looking at our code-server and openvscode-server containers as potential replacements.
+  https://github.com/linuxserver/docker-code-server
+  https://github.com/linuxserver/docker-openvscode-server
+
 # supported architectures
 available_architectures:
   - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
@@ -50,6 +56,7 @@ app_setup_block: |
 
 # changelog
 changelogs:
+  - { date: "23.06.22:", desc: "Deprecate image." }
   - { date: "24.06.21:", desc: "Use prebuilt compose binaries for the linuxserver repo." }
   - { date: "07.02.20:", desc: "Add optional http auth." }
   - { date: "02.06.19:", desc: "Initial Release." }
